# Arina-AV-Downloader

./: .gitignore  0-Install-Traditional-pip.bat  1-Cookie-Setup-Wizard.bat  2-Start-GUI.bat  CHANGELOG.md  COOKIE_GUIDE.md  DEVELOPER.md  INSTALL_GUIDE.md  MULTITHREADING_IMPLEMENTATION.md  QUICK_START.md  README.md  USER_GUIDE.md  UV_GUIDE.md  apple_gui.py  arina_cli.py  arina_gui.py  cookie_manager.py  cookie_setup_wizard.py  debug_gui.bat  debug_gui.py  diagnose_env.bat  downloader_config.json  enhanced_downloader.py  env_check.py  fixed_apple_gui.py  force_blue_gui.py  gui_downloader.py  install.bat  install_and_test.ps1  install_gui.bat  install_uv.bat  launch_apple_gui.bat  launch_fixed_gui.bat  launch_gui.bat  launcher.py  migrate_config.py  move_files.bat  move_files.ps1  move_to_vd.py  move_vd_files.bat  (+60 more)
.cursor/rules/: config-files.mdc  project-structure.mdc  python-coding-standards.mdc  video-downloader.mdc  windows-environment.mdc
.kiro/specs/portable-deployment/: design.md  requirements.md  tasks.md
.specstory/history/: 2025-07-15_11-11-generate-cursor-rules.md
cookies/: README.md
cookies/cookies/: pornhub_cookies.json  pornhub_cookies.txt
logs/: README.md
portable/: __init__.py  config_manager.py  dep_manager.py  env_checker.py  error_handler.py  maintenance.py  models.py  path_manager.py  utils.py  venv_manager.py  welcome_wizard.py
